--- a/Recipe-site/src/components/RecipeListDisplay/RecipeCardList.css
+++ b/Recipe-site/src/components/RecipeListDisplay/RecipeCardList.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
+
 .card-list-wrapper {
   width: 100%;
   max-width: 100vw;
@@ -28,11 +30,30 @@
   justify-content: center;
 }
 
-.recipe-header-title {
-  color: white;
-  z-index: 2;
+.recipe-header-text {
+  position: relative;
   text-align: center;
-  padding: 1rem 2rem;
+  color: white;
+}
+
+.recipe-header-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.recipe-header-title {
+  font-size: 3rem;
+}
+
+.recipe-header-subtitle {
+  font-size: 7rem;
+  opacity: 0.6;
+  position: absolute;
+  transform: translate(-50%, -30%);
+  font-family: "Freestyle Script";
 }
 
 .content-wrapper {
