--- a/Recipe-site/src/index.css
+++ b/Recipe-site/src/index.css
@@ -9,7 +9,7 @@ body {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Alef", Sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
